Fix overflowing link

--- a/src/stylesheets/datepicker.css
+++ b/src/stylesheets/datepicker.css
@@ -33,8 +33,8 @@
   display: block;
   position: relative;
   width: 29px;
-  height: 31px;
-  line-height: 31px;
+  height: 30px;
+  line-height: 30px;
   position: absolute;
   top: 0;
 }
